--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chiliz-agent-kit",
-  "version": "1.0.8",
+  "version": "1.0.12",
   "description": "A production-ready TypeScript SDK for interacting with the Chiliz blockchain",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -30,6 +30,10 @@
   ],
   "author": "",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Fan-Trovio/chiliz-agent-kit"
+  },
   "dependencies": {
     "ethers": "^5.8.0",
     "winston": "^3.11.0"
